<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tictum.appcandidatos.activities.Activity_Formulario3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/pregunta5"
        style="@style/fuentesPreguntas"/>

    <Spinner
        android:layout_width="140dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pregunta6"
        style="@style/fuentesPreguntas"/>

    <RadioGroup
        android:id="@+id/radio_group_comunicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">


        <RadioButton
            android:id="@+id/mala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mala"
            />


        <RadioButton
            android:id="@+id/aceptable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptable"
            />


        <RadioButton
            android:id="@+id/buena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buena"/>


        <RadioButton
            android:id="@+id/excelente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excelente"
            />

    </RadioGroup>

    <Button
        android:id="@+id/btn_siguiente3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>
    
</LinearLayout>
