<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tictum.appcandidatos.activities.Activity_Formulario">

    <TextView
        android:id="@+id/pregunta1"
        style="@style/fuentesPreguntas"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta1" />

    <RadioGroup
        android:id="@+id/radio_group_experiencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="100dp">

        <RadioButton
            android:id="@+id/opcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionUno" />

        <RadioButton
            android:id="@+id/opcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionDos" />

        <RadioButton
            android:id="@+id/opcion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionTres" />

        <RadioButton
            android:id="@+id/opcion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Más de 5 años" />

    </RadioGroup>

    <TextView
        android:id="@+id/pregunta2"
        style="@style/fuentesPreguntas"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta2" />

    <Spinner
        android:id="@+id/pais_origen"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/btn_siguiente"/>

    
</LinearLayout>
